add SpringDataJpa, refactoring