@@ -2,7 +2,6 @@ package com.javaapp.votesystem;
 
 import com.javaapp.votesystem.model.Restaurant;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.javaapp.votesystem.model.AbstractBaseEntity.START_SEQ;
@@ -11,12 +10,12 @@ public class RestaurantTestData {
     public static final int RESTAURANT_ID1 = START_SEQ + 4;
     public static final int RESTAURANT_ID2 = START_SEQ + 5;
     public static final int RESTAURANT_ID3 = START_SEQ + 6;
-   // public static final int RESTAURANT_ID4 = START_SEQ + 7;
+    // public static final int RESTAURANT_ID4 = START_SEQ + 7;
 
     public static final Restaurant RESTAURANT1 = new Restaurant(RESTAURANT_ID1, "restaurant1");
     public static final Restaurant RESTAURANT2 = new Restaurant(RESTAURANT_ID2, "restaurant2");
     public static final Restaurant RESTAURANT3 = new Restaurant(RESTAURANT_ID3, "restaurant3");
- //   public static final Restaurant RESTAURANT4 = new Restaurant(RESTAURANT_ID4, "restaurant4");
+    //   public static final Restaurant RESTAURANT4 = new Restaurant(RESTAURANT_ID4, "restaurant4");
 
-    public static final List<Restaurant> restaurants = Arrays.asList(RESTAURANT1, RESTAURANT2, RESTAURANT3);
+    public static final List<Restaurant> restaurants = List.of(RESTAURANT1, RESTAURANT2, RESTAURANT3);
 }
